// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Loading handles error 1`] = `
<div>
  Error! Component failed to load
</div>
`;

exports[`Loading handles isLoading before pastDelay 1`] = `null`;

exports[`Loading handles pastDelay 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "rgba(255, 255, 255, 0.8)",
      "cursor": "default",
      "display": "flex",
      "height": "100%",
      "justifyContent": "center",
      "left": 0,
      "opacity": 1,
      "pointerEvents": "all",
      "position": "absolute",
      "top": 0,
      "transition": "opacity 0.35s ease",
      "width": "100%",
      "zIndex": 10,
    }
  }
>
  <div
    className="mdl-spinner mdl-spinner--single-color mdl-js-spinner is-active is-upgraded"
    style={
      Object {
        "transition": "opacity 0.35s ease",
      }
    }
  >
    <div
      className="mdl-spinner__layer mdl-spinner__layer-1"
      style={
        Object {
          "borderColor": "rgb(66, 133, 244)",
        }
      }
    >
      <div
        className="mdl-spinner__circle-clipper mdl-spinner__left"
      >
        <div
          className="mdl-spinner__circle"
        />
      </div>
      <div
        className="mdl-spinner__gap-patch"
      >
        <div
          className="mdl-spinner__circle"
        />
      </div>
      <div
        className="mdl-spinner__circle-clipper mdl-spinner__right"
      >
        <div
          className="mdl-spinner__circle"
        />
      </div>
    </div>
    <div
      className="mdl-spinner__layer mdl-spinner__layer-2"
      style={
        Object {
          "borderColor": "#123e57",
        }
      }
    >
      <div
        className="mdl-spinner__circle-clipper mdl-spinner__left"
      >
        <div
          className="mdl-spinner__circle"
        />
      </div>
      <div
        className="mdl-spinner__gap-patch"
      >
        <div
          className="mdl-spinner__circle"
        />
      </div>
      <div
        className="mdl-spinner__circle-clipper mdl-spinner__right"
      >
        <div
          className="mdl-spinner__circle"
        />
      </div>
    </div>
    <div
      className="mdl-spinner__layer mdl-spinner__layer-3"
      style={
        Object {
          "borderColor": "#bb0e3d",
        }
      }
    >
      <div
        className="mdl-spinner__circle-clipper mdl-spinner__left"
      >
        <div
          className="mdl-spinner__circle"
        />
      </div>
      <div
        className="mdl-spinner__gap-patch"
      >
        <div
          className="mdl-spinner__circle"
        />
      </div>
      <div
        className="mdl-spinner__circle-clipper mdl-spinner__right"
      >
        <div
          className="mdl-spinner__circle"
        />
      </div>
    </div>
    <div
      className="mdl-spinner__layer mdl-spinner__layer-4"
      style={
        Object {
          "borderColor": "#5b5151",
        }
      }
    >
      <div
        className="mdl-spinner__circle-clipper mdl-spinner__left"
      >
        <div
          className="mdl-spinner__circle"
        />
      </div>
      <div
        className="mdl-spinner__gap-patch"
      >
        <div
          className="mdl-spinner__circle"
        />
      </div>
      <div
        className="mdl-spinner__circle-clipper mdl-spinner__right"
      >
        <div
          className="mdl-spinner__circle"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Loading handles timedOut 1`] = `
<div>
  Loader timed out!
</div>
`;
